--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
         <div class="w-full md:w-4/12 px-4 mx-auto text-center">
           <div class="text-sm text-orange-600 font-semibold py-1">
             Copyright © 2020 by<a href="#" class="text-gray-700">
-              Ivan Nikolic</a>.
+              Ivan Popovic<br/> & Ivan Nikolic</a>.
           </div>
         </div>
       </div>
