--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             "
             class="flex flex-col bg:transparent lg:flex-row list-none lg:ml-auto rounded"
           >
+          
             <!-- Icon Facebook-->
             <li class="flex items-center">
               <a
@@ -415,9 +416,8 @@
           height: auto;
           background: #1c1c1c;
           color: aliceblue;
-          opacity: 0.9;
         "
-        data-aos="zoom-in-down"
+        data-aos="fade-in"
       >
         <div class="container mx-auto mt-16">
           <video width="100%" height="600" controls loop muted>
@@ -442,7 +442,7 @@
         style="
           background-image: url('./assets/img/fields-1.jpg');
           width: 100%;
-          height: 110vh;
+          height: 100vh;
           object-fit: cover;
         "
         class="relative py-20"
@@ -536,10 +536,10 @@
             <a href="#">
               <img 
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/logo5.jpg"
+                src="./assets/img/logo5.jpg" alt="Mint"
               />
               <div class="pt-3 flex items-center justify-between">
-                <p class="">Mint</p>
+                <p class="" data-aos="fade-right">Mint</p>
                 <svg
                   class="h-6 w-6 fill-current text-gray-500 hover:text-black"
                   xmlns="http://www.w3.org/2000/svg"
@@ -550,7 +550,7 @@
                   ></path>
                 </svg>
               </div>
-              <p class="pt-1 text-gray-900">£9.99</p>
+              <p class="pt-1 text-gray-900">€ 9.99</p>
             </a>
           </div>
 
@@ -558,10 +558,10 @@
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/bosiljak11.jpg"
+                src="./assets/img/bosiljak11.jpg" alt="Basil"
               />
               <div class="pt-3 flex items-center justify-between">
-                <p class="">Boslijak</p>
+                <p class="" data-aos="fade-right">Boslijak</p>
                 <svg
                   class="h-6 w-6 fill-current text-gray-500 hover:text-black"
                   xmlns="http://www.w3.org/2000/svg"
@@ -572,7 +572,7 @@
                   ></path>
                 </svg>
               </div>
-              <p class="pt-1 text-gray-900">£9.99</p>
+              <p class="pt-1 text-gray-900">€ 9.99</p>
             </a>
           </div>
 
@@ -580,10 +580,10 @@
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/herb-1.jpg"
+                src="./assets/img/herb-1.jpg" alt="Chilli"
               />
               <div class="pt-3 flex items-center justify-between">
-                <p class="">Product Name</p>
+                <p class="" data-aos="fade-right">Chilli</p>
                 <svg
                   class="h-6 w-6 fill-current text-gray-500 hover:text-black"
                   xmlns="http://www.w3.org/2000/svg"
@@ -594,7 +594,7 @@
                   ></path>
                 </svg>
               </div>
-              <p class="pt-1 text-gray-900">£9.99</p>
+              <p class="pt-1 text-gray-900">€ 19.99</p>
             </a>
           </div>
 
@@ -602,10 +602,10 @@
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/herb-2.jpg"
+                src="./assets/img/herb-2.jpg" alt="Parsley"
               />
               <div class="pt-3 flex items-center justify-between">
-                <p class="">Product Name</p>
+                <p class="" data-aos="fade-right">Parsley</p>
                 <svg
                   class="h-6 w-6 fill-current text-gray-500 hover:text-black"
                   xmlns="http://www.w3.org/2000/svg"
@@ -616,7 +616,7 @@
                   ></path>
                 </svg>
               </div>
-              <p class="pt-1 text-gray-900">£9.99</p>
+              <p class="pt-1 text-gray-900">€ 9.99</p>
             </a>
           </div>
 
@@ -624,10 +624,10 @@
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/herb-3.jpg"
+                src="./assets/img/herb-3.jpg" alt=""
               />
               <div class="pt-3 flex items-center justify-between">
-                <p class="">Product Name</p>
+                <p class="" data-aos="fade-right">Rosemary</p>
                 <svg
                   class="h-6 w-6 fill-current text-gray-500 hover:text-black"
                   xmlns="http://www.w3.org/2000/svg"
@@ -638,7 +638,7 @@
                   ></path>
                 </svg>
               </div>
-              <p class="pt-1 text-gray-900">£9.99</p>
+              <p class="pt-1 text-gray-900">€ 15.99</p>
             </a>
           </div>
 
@@ -649,7 +649,7 @@
                 src="./assets/img/herb-4.jpg"
               />
               <div class="pt-3 flex items-center justify-between">
-                <p class="">Product Name</p>
+                <p class="" data-aos="fade-right">Product Name</p>
                 <svg
                   class="h-6 w-6 fill-current text-gray-500 hover:text-black"
                   xmlns="http://www.w3.org/2000/svg"
@@ -671,7 +671,7 @@
                 src="./assets/img/herb-5.jpg"
               />
               <div class="pt-3 flex items-center justify-between">
-                <p class="">Product Name</p>
+                <p class="" data-aos="fade-right">Product Name</p>
                 <svg
                   class="h-6 w-6 fill-current text-gray-500 hover:text-black"
                   xmlns="http://www.w3.org/2000/svg"
@@ -693,7 +693,7 @@
                 src="./assets/img/herb-6.jpg"
               />
               <div class="pt-3 flex items-center justify-between">
-                <p class="">Product Name</p>
+                <p class="" data-aos="fade-right">Product Name</p>
               </div>
               <p class="pt-1 text-gray-900">£9.99</p>
             </a>
