--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
     />
     <link rel="stylesheet" href="main.css" />
-    <title>Poljoprivredno gazdinstvo Jovanovic</title>
+    <title>
+      Poljoprivredno gazdinstvo Jovanovic
+    </title>
   </head>
 
   <body class="antialiased overflow-y-hidden" style="background-color: white">
@@ -44,17 +46,17 @@
           >
           <button
             style="transition: all 0.5s ease-out; font-size: 28px"
-            class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none"
+            class="cursor-pointer text-xl leading-none px-3 py-1  bg-transparent block lg:hidden outline-none focus:outline-none ml-2"
             type="button"
             onclick="toggleNavbar('example-collapse-navbar')"
           >
-            <i class="text-white fas fa-ellipsis-h fa-lg"></i>
+            <i class="text-white fas fa-bars fa-lg"></i>
           </button>
         </div>
 
         <div
-          style="transition: all 0.5s ease-out"
-          class="lg:flex flex-grow items-center bg-black rounded p-6 lg:bg-transparent lg:shadow-none hidden"
+          style="transition: all 0.5s ease-out;border:2px solid #373737"
+          class="lg:flex flex-grow items-center bg-black rounded p-5 lg:bg-transparent lg:shadow-none hidden"
           id="example-collapse-navbar"
         >
           <ul
@@ -65,7 +67,6 @@
             "
             class="flex flex-col bg:transparent lg:flex-row list-none lg:ml-auto rounded"
           >
-          
             <!-- Icon Facebook-->
             <li class="flex items-center">
               <a
@@ -128,7 +129,7 @@
               <div>
                 <h1 class="text-gray-300 font-semibold text-5xl">
                   Poljoprivredno gazdinstvo
-                  <span class="text-orange-500">Jovanovic</span>
+                  <span style="margin-left: 130px;" class="text-orange-500"><marquee direction="up">Jovanovic</marquee></span>
                 </h1>
                 <p class="mt-4 text-sm text-left text-gray-300 pb-4">
                   ЛЕКОВИТЕ БИЉКЕ (У ЛИТЕРАТУРИ СЕ МОЖЕ СРЕСТИ И ТЕРМИН
@@ -442,7 +443,7 @@
         style="
           background-image: url('./assets/img/fields-1.jpg');
           width: 100%;
-          height: 100vh;
+          height: 90vh;
           object-fit: cover;
         "
         class="relative py-20"
@@ -531,12 +532,18 @@
       </section>
 
       <section class="bg-white py-8">
-        <div class="container mx-auto flex items-center flex-wrap pt-4 mt-8 pb-12">
-          <div style="background-color:azure;" class="w-1/2 md:w-1/3 xl:w-1/3 p-6 flex flex-col bg-gray-500">
+        <div
+          class="container mx-auto flex items-center flex-wrap pt-4 mt-8 pb-12"
+        >
+          <div
+            style="background-color: azure"
+            class="w-1/2 md:w-1/3 xl:w-1/3 p-6 flex flex-col bg-gray-500"
+          >
             <a href="#">
-              <img 
+              <img
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/logo5.jpg" alt="Mint"
+                src="./assets/img/logo5.jpg"
+                alt="Mint"
               />
               <div class="pt-3 flex items-center justify-between">
                 <p class="" data-aos="fade-right">Mint</p>
@@ -554,11 +561,15 @@
             </a>
           </div>
 
-          <div style="background-color:azure;" class="w-1/2 md:w-1/3 xl:w-1/3 p-6 flex flex-col">
+          <div
+            style="background-color: azure"
+            class="w-1/2 md:w-1/3 xl:w-1/3 p-6 flex flex-col"
+          >
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/bosiljak11.jpg" alt="Basil"
+                src="./assets/img/bosiljak11.jpg"
+                alt="Basil"
               />
               <div class="pt-3 flex items-center justify-between">
                 <p class="" data-aos="fade-right">Boslijak</p>
@@ -576,11 +587,15 @@
             </a>
           </div>
 
-          <div style="background-color:azure;" class="w-1/2 md:w-1/3 xl:w-1/3 p-6 flex flex-col">
+          <div
+            style="background-color: azure"
+            class="w-1/2 md:w-1/3 xl:w-1/3 p-6 flex flex-col"
+          >
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/herb-1.jpg" alt="Chilli"
+                src="./assets/img/herb-1.jpg"
+                alt="Chilli"
               />
               <div class="pt-3 flex items-center justify-between">
                 <p class="" data-aos="fade-right">Chilli</p>
@@ -598,11 +613,15 @@
             </a>
           </div>
 
-          <div style="background-color:azure;" class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+          <div
+            style="background-color: azure"
+            class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col"
+          >
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/herb-2.jpg" alt="Parsley"
+                src="./assets/img/herb-2.jpg"
+                alt="Parsley"
               />
               <div class="pt-3 flex items-center justify-between">
                 <p class="" data-aos="fade-right">Parsley</p>
@@ -620,11 +639,15 @@
             </a>
           </div>
 
-          <div style="background-color:azure;" class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+          <div
+            style="background-color: azure"
+            class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col"
+          >
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
-                src="./assets/img/herb-3.jpg" alt=""
+                src="./assets/img/herb-3.jpg"
+                alt=""
               />
               <div class="pt-3 flex items-center justify-between">
                 <p class="" data-aos="fade-right">Rosemary</p>
@@ -642,7 +665,10 @@
             </a>
           </div>
 
-          <div style="background-color:azure;" class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+          <div
+            style="background-color: azure"
+            class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col"
+          >
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
@@ -664,7 +690,10 @@
             </a>
           </div>
 
-          <div style="background-color:azure;" class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+          <div
+            style="background-color: azure"
+            class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col"
+          >
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
@@ -686,7 +715,10 @@
             </a>
           </div>
 
-          <div style="background-color:azure;" class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+          <div
+            style="background-color: azure"
+            class="w-1/2 md:w-1/3 xl:w-1/4 p-6 flex flex-col"
+          >
             <a href="#">
               <img
                 class="hover:grow hover:shadow-lg"
