--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div
-          style="transition: all 0.5s ease-out;border:2px solid #373737"
+          style="transition: all 0.5s ease-out;"
           class="lg:flex flex-grow items-center bg-black rounded p-5 lg:bg-transparent lg:shadow-none hidden"
           id="example-collapse-navbar"
         >
@@ -428,12 +428,12 @@
             class="flex flex-col w-full lg:w-1/2 justify-center items-start px-6 tracking-wide mb-12"
           >
             <h1 class="text-2xl my-4">
-              Stripy Zig Zag Jigsaw Pillow and Duvet Set
+              This fields make the natural products
             </h1>
             <a
               class="text-xl inline-block no-underline border-b border-gray-600 leading-relaxed hover:text-black hover:border-black"
               href="#"
-              >products</a
+              >Our products</a
             >
           </div>
         </div>
