--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <div>
                 <h1 class="text-gray-300 font-semibold text-5xl">
                   Poljoprivredno gazdinstvo
-                  <span style="margin-left: 115px;" class="text-orange-500"><marquee direction="up">Jovanovic</marquee></span>
+                  <span style="margin-left: 105px;" class="text-orange-500"><marquee direction="up">Jovanovic</marquee></span>
                 </h1>
                 <p class="mt-4 text-sm text-left text-gray-300 pb-4">
                   ЛЕКОВИТЕ БИЉКЕ (У ЛИТЕРАТУРИ СЕ МОЖЕ СРЕСТИ И ТЕРМИН
@@ -148,7 +148,7 @@
                   id="button-brochure"
                   class="bg-transparent hover:bg-orange-500 text-white font-semibold hover:text-gray-900 p-3 border border-orange-500 hover:border-transparent rounded mt-3 focus:outline-none"
                 >
-                  Download Brochure
+                  <a href="keyboard.pdf">Download Brochure</a>
                 </button>
               </div>
             </div>
